# cloak

./: .gitignore  .gitmodules  .releaserc.json  .releaserc.yaml  Cargo.toml  Earthfile  Pulumi.yaml  README.md  package-lock.json  package.json
.devcontainer/: .bash_aliases  Dockerfile  Dockerfile.postgres  aliases.bash  devcontainer.json  docker-compose.dev.yml  docker-compose.earthly.yml  docker-compose.yml  envoy.yaml  postgres_users.sql
.github/workflows/: ci.yml  sast.yml  update-config.sh
api/: Cargo.toml  build.rs
api/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
api/migrations/2021-12-04-123043_initial_setup/: down.sql  up.sql
api/protos/: api.proto
api/src/: auth_id.rs  config.rs  errors.rs  main.rs  models.rs  server.rs
app/: Cargo.toml  build.rs  package-lock.json  package.json  sqlx-data.json
app/asset-pipeline/: app_layout.scss  cards.scss  cards.ts  filter-trigger.ts  index.html  index.scss  index.ts  package.json  remember-form.ts  remember-select.ts  select-div.ts  side-drawer.scss  side-drawer.ts  tables.scss  vault.ts
app/asset-pipeline/cryptography/: aes_key.ts  byte_data.ts  db.ts  ecdh_keypair.ts  ecdsa_keypair.ts  vault.ts
app/asset-pipeline/mockup-pages/: audit.html  users.html  vault-details.html  vault-secrets.html  vault-who.html  vaults.html
app/asset-pipeline/scss/: app_layout.scss  callouts.scss  content_layout.scss  forms.scss  index.scss  layout.scss  tables.scss  utilities.scss
app/asset-pipeline/web-components/: ecdh-cipher.ts  side-drawer-trigger.ts  side-drawer.scss  side-drawer.ts  snack-bar.scss  snack-bar.ts
app/queries/: audit.sql  environments.sql  invitations.sql  organisations.sql  rbac.sql  secrets.sql  service_account_secrets.sql  service_accounts.sql  user_vaults.sql  users.sql  vaults.sql
app/src/: api_service.rs  authentication.rs  config.rs  errors.rs  hybrid.rs  layout.rs  lib.rs  main.rs  models.rs  profile.rs  registration_handler.rs  rls.rs  static_files.rs  user_id.rs
app/src/audit/: filter.rs  index.rs  mod.rs
app/src/members/: add_member.rs  add_member.ts  delete_member.rs  index.rs  mod.rs
app/src/models/: invitation.rs  mod.rs  organisation.rs  secret.rs  service_account.rs  service_account_secret.rs  user.rs  user_vault.rs  vault.rs
app/src/profile/: index.rs  mod.rs  set_details.rs
app/src/secrets/: delete.rs  delete_secret.rs  delete_secret_controller.ts  index.rs  mod.rs  new_secret.rs  new_secret.ts  secrets_table_controller.ts
app/src/service_accounts/: connect_account.rs  connect_account.ts  delete.rs  delete_account_controller.ts  index.rs  mod.rs  new_account.rs  new_account.ts  new_account_controller.ts  service_account_controller.ts  view.rs  view.ts
app/src/team/: accept_invite.rs  create_invite.rs  create_invite.ts  delete_member.rs  index.rs  invite_user.rs  invite_user.ts  mod.rs  new_team.rs  set_name.rs  switch.rs
app/src/vaults/: delete_vault.rs  index.rs  members.rs  members.ts  mod.rs  new_vault.rs  new_vault.ts
app/templates/: layout.rs.html
app/templates/audit/: action.rs.html  client.rs.html  entity.rs.html  filter.rs.html  index.rs.html
app/templates/members/: add_member.rs.html  add_member.ts  delete.rs.html  delete_member.ts  index.rs.html
app/templates/profile/: index.rs.html
app/templates/secrets/: delete.rs.html  delete_secret.ts  empty.rs.html  index.rs.html  new_secret.rs.html  new_secret.ts
app/templates/service_accounts/: connect_account.rs.html  connect_account.ts  delete.rs.html  delete_account_controller.ts  empty.rs.html  index.rs.html  new_account.rs.html  new_account.ts  view.rs.html  view.ts
app/templates/team/: create_invite.rs.html  create_invite.ts  delete.rs.html  index.rs.html  role.rs.html  switch.rs.html
app/templates/vaults/: delete_vault.ts  empty.rs.html  index.rs.html  new_vault.rs.html  new_vault.ts
app/tests/: common.rs  multi_user_test.rs  single_user_test.rs
blog/: config.toml
blog/content/: developer-introduction.md
blog/public/: index.html
blog/sass/: blog.scss  cta.scss  developer-docs.scss  index.scss  navbar.scss
blog/templates/: base.html  blog-page.html  blog.html  developers-page.html  developers.html  index.html
cli/: Cargo.toml  build.rs  key.pem  key_pub.pem
cli/src/: config.rs  main.rs
crates/asset-pipeline/: cards.ts  index.ts  package-lock.json  package.json
crates/axum-server/: Cargo.toml
crates/axum-server/src/: api_service.rs  authentication.rs  config.rs  errors.rs  layout.rs  main.rs  registration_handler.rs  rls.rs  static_files.rs
crates/axum-server/src/audit/: filter.rs  index.rs  mod.rs
crates/axum-server/src/members/: add_member.rs  delete_member.rs  index.rs  mod.rs
crates/axum-server/src/profile/: index.rs  mod.rs  profile_popup.rs  set_details.rs
crates/axum-server/src/secrets/: delete_secret.rs  index.rs  mod.rs  new_secret.rs
crates/axum-server/src/service_accounts/: connect_account.rs  delete.rs  index.rs  mod.rs  new_account.rs
crates/axum-server/src/team/: accept_invite.rs  create_invite.rs  delete_member.rs  mod.rs  new_team.rs  set_name.rs
crates/axum-server/src/vaults/: delete_vault.rs  index.rs  mod.rs  new_vault.rs  rename.rs
crates/axum-server/tests/: common.rs  multi_user_test.rs  single_user_test.rs
crates/cli/: Cargo.toml  README.md  build.rs
crates/cli/src/: config.rs  import.rs  info.rs  init.rs  keyring.rs  main.rs  run.rs  secrets.rs  select.rs
crates/db/: Cargo.toml  backup-conf.yaml  lib.rs
crates/external-secrets/: Cargo.toml  README.md
crates/external-secrets/src/: config.rs  errors.rs  main.rs  secrets_handler.rs
crates/external-secrets/yaml/: external-secret-service.yaml  external-secret.yaml  external-secrets.yaml  secret-store.yaml
crates/grpc-api/: Cargo.toml  build.rs  lib.rs
crates/primer-rsx/: Cargo.toml  (+17 more)
db/: schema.sql
infra/: Pulumi.prod.yaml  Pulumi.yaml  README.md  index.ts  package-lock.json  package.json  update-config.sh  update-git.sh  update-version.sh  util.ts
protos/: api.proto
webui/: Cargo.toml  build.rs  package-lock.json  package.json
www/: _headers  config.toml
(+246 files in other folders)
