[package]
name = "grpc-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
prost = "0"
tonic = "0"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
tonic-build = "0"