[package]
name = "grpc-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
prost = "0"
tonic = "0"
serde = { version = "1", features = ["derive"] }

# Elliptic Curve Diffie Helman
p256 = { version = "0", default-features = false, features = ["ecdh", "pem"] } 
base64 = "0.13.1" # So we encode DER public key to base64
aes-gcm = "0"

# We use request to make grpc-web requests
reqwest = { version = "0", default-features = false, features = ["rustls-tls"]  }

[build-dependencies]
tonic-build = "0"
rust-grpc-web = { git = "https://github.com/purton-tech/rust-grpc-web" }